<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/detail_placeholder" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSuka"
                style="?attr/borderlessButtonStyle"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/icons8_love_96px"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/detailRating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="@+id/detailRating"
                app:layout_constraintVertical_bias="0.8"
                tools:visibility="visible" />

            <Button
                android:id="@+id/btnTidakSuka"
                style="?attr/borderlessButtonStyle"
                android:layout_width="31dp"
                android:layout_height="31dp"
                android:layout_marginStart="16dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/icons8_love_96px_pink"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/detailRating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="@+id/detailRating"
                app:layout_constraintVertical_bias="0.8"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/background_poster"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/detailPoster"
                android:layout_width="132dp"
                android:layout_height="198dp"
                android:layout_marginTop="200dp"
                app:layout_constraintCircleRadius="?attr/dialogCornerRadius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/background_poster" />

            <TextView
                android:id="@+id/detailJudul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/tulisanPrimary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/detailPoster"
                app:layout_constraintTop_toBottomOf="@+id/background_poster"
                tools:text="Aquaman" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/realease_date"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/detailPoster"
                app:layout_constraintTop_toBottomOf="@+id/detailJudul" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/synopsis"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailRatingText" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/duration"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/detailPoster"
                app:layout_constraintTop_toBottomOf="@+id/detailRilis" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/tagline"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/detailPoster"
                app:layout_constraintTop_toBottomOf="@+id/detailDurasi" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/status"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/detailPoster"
                app:layout_constraintTop_toBottomOf="@+id/detailTagline" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/group"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/detailPoster"
                app:layout_constraintTop_toBottomOf="@+id/detailStatus" />

            <TextView
                android:id="@+id/detailRilis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/tulisanPrimary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                tools:text="2018" />

            <TextView
                android:id="@+id/detailDurasi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/tulisanPrimary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/detailTagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="Robert"
                android:textColor="@color/tulisanPrimary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/detailDurasi" />

            <TextView
                android:id="@+id/detailStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="TextView"
                android:textColor="@color/tulisanPrimary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/detailTagline" />

            <TextView
                android:id="@+id/detailGolongan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="TextView"
                android:textColor="@color/tulisanPrimary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/detailStatus" />

            <RatingBar
                android:id="@+id/detailRating"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:numStars="5"
                android:progressTint="@android:color/holo_orange_light"
                android:rating="4"
                app:layout_constraintStart_toEndOf="@+id/detailRatingText"
                app:layout_constraintTop_toTopOf="@+id/detailRatingText" />

            <TextView
                android:id="@+id/detailRatingText"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="4.2" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toEndOf="@+id/detailRating"
                app:layout_constraintTop_toTopOf="@+id/detailRating" />

            <TextView
                android:id="@+id/detailSinopsis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@color/tulisanPrimary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/detailRatingText"
                app:layout_constraintTop_toBottomOf="@+id/detailGolongan"
                tools:layout_editor_absoluteX="1dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/detailRating"
                tools:layout_editor_absoluteX="1dp" />

            <TextView
                android:id="@+id/tv_status_suka"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="16dp"
                android:text="@string/like"
                android:textColor="@color/tulisanPrimary"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="@+id/divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>